[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/panel_equipment_info.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/screens/marketplace.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/listing_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/wallet_info.tscn" type="PackedScene" id=6]

[node name="ScreenInventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 150.0
margin_right = -32.0
margin_bottom = -32.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="WalletInfo" parent="." instance=ExtResource( 6 )]
margin_left = -718.0
margin_top = -115.0
margin_right = 62.0
margin_bottom = -35.0
rect_pivot_offset = Vector2( 968, 281 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0

[node name="For sale" parent="TabContainer" instance=ExtResource( 4 )]

[node name="Your listing" parent="TabContainer" instance=ExtResource( 4 )]
visible = false

[node name="InfoPanel" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.7
listing_mode = true

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -109.0
margin_right = 302.0
margin_bottom = 65.0
dialog_text = "Confirm to buy this equipment ?"

[node name="DeleteListingItemDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.5
margin_top = -85.0
margin_right = 300.5
margin_bottom = 85.0
dialog_text = "Confirm to delete this listing ?"

[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="InfoPanel/ButtonCont/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="InfoPanel/ButtonCont/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="InfoPanel/ButtonCont/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="confirmed" from="DeleteListingItemDialog" to="." method="_on_DeleteListingItemDialog_confirmed"]

[editable path="InfoPanel"]
